--- a/style.css
+++ b/style.css
@@ -88,8 +88,14 @@ body {
 @media screen and (max-width: 1020px) {
   .main-container {
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: "main" "aside";
     justify-items: center;
+  }
+
+  .main {
+    width: 100%;
+    height: 100%;
   }
 
   .aside {
@@ -98,6 +104,14 @@ body {
 }
 
 @media screen and (max-width: 610px) {
+  .main-container {
+    grid-template-rows: 1fr 1fr;
+  }
+  .main {
+    width: 100%;
+    height: 100%;
+  }
+
   .aside {
     width: 80%;
   }
