--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .aside {
