--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .aside {
