--- a/style.css
+++ b/style.css
@@ -9,21 +9,122 @@ body {
   background-image: url("img/newEnergyBg.png");
   background-size: cover;
   background-position: center; */
+  display: grid;
+  grid-template-columns: 0.5fr 2.5fr;
+  grid-template-areas: "nav main";
+  position: relative;
+}
+
+nav {
+  grid-area: nav;
+  height: 100%;
+  background-color: #212121;
+  /* Agar saat di scroll tetap diam */
+  position: fixed;
+}
+
+main .hidden {
+  display: none;
+}
+
+.nav-container {
+  padding: 1rem;
+}
+
+.nav-container .logo {
+  display: flex;
+  gap: 0.8rem;
+  padding: 0 0.2rem;
+  color: white;
+  font-family: "Roboto", sans-serif;
+}
+
+.nav-container .image {
+  padding: 0.2rem;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 18%;
+  display: flex;
+  justify-items: center;
+  align-items: cen;
+}
+
+.nav-container .logo .image img {
+  width: 45px;
+  border-radius: 20%;
+}
+
+.nav-container .logo h3 {
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
+.nav-container .logo p {
+  padding: 0.4rem 0;
+  font-size: 0.6rem;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+.nav-container ul {
+  padding: 1rem 0;
+}
+
+.nav-container li {
+  padding: 0.8rem 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  /* box-sizing: border-box; */
+  /* border-bottom: 1px solid red; */
+}
+
+.nav-container li:hover {
+  cursor: pointer;
+  border-bottom: 2px solid rgba(71, 70, 70, 0.8);
+}
+
+.nav-container li.active {
+  border-bottom: 2px solid rgba(71, 70, 70, 0.8);
+}
+
+.nav-container ul li a {
+  text-decoration: none;
+  font-size: 0.9rem;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+}
+
+.nav-container ul li a span {
+  padding: 0 0.5rem;
+
+  img {
+    width: 1.2rem;
+  }
+}
+
+main {
+  grid-area: main;
+  height: 100vh;
 }
 
 .main-container {
-  margin: 1.5rem 5%;
+  margin: 1.5rem 2%;
   display: grid;
   grid-template-areas: "main aside";
   grid-template-columns: 1fr 0.4fr;
   gap: 1rem;
-
   /* border: 1px solid red; */
 }
 
 .main {
   grid-area: main;
-  border: 3px solid #78909c;
+  border: 1px solid #78909c;
   border-style: outset;
   background-image: url("img/map-lampu.png");
   background-position: center;
@@ -44,7 +145,7 @@ body {
 }
 
 .aside .card {
-  border: 3px solid #78909c;
+  border: 1px solid #78909c;
   border-style: outset;
   padding: 10px;
   background-color: #212121;
@@ -53,13 +154,15 @@ body {
   flex-direction: column;
   gap: 0.2rem;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 
 .aside .card h2 {
   text-align: center;
   font-size: 1rem;
-  font-family: "Orbitron", sans-serif;
-  font-weight: 500;
+  /* font-family: "Orbitron", sans-serif; */
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   text-shadow: 1px 1px 2px #80cbc4;
 }
 
@@ -69,6 +172,10 @@ body {
   background-color: #039be5;
   font-size: 0.8rem;
   font-family: "Roboto", sans-serif;
+
+  h3 {
+    font-weight: 400;
+  }
 }
 
 .aside .card .vc-status {
@@ -84,7 +191,87 @@ body {
 }
 
 .card .vc-status h3 {
+  font-weight: 400;
+}
+
+/*Voltage*/
+
+main .voltage-header {
+  padding: 1rem 3%;
+  display: flex;
+  justify-content: space-between;
+}
+
+main .voltage-header .title h3 {
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+main .voltage-container .buttons ul {
+  display: flex;
+  padding: 0 0.4rem;
+  gap: 1rem;
+  justify-content: space-between;
+  list-style: none;
+}
+
+main .voltage-container .buttons ul li a {
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 0.1rem 0.8rem;
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  font-size: 0.8rem;
+  font-family: "Roboto", sans-serif;
+  border-radius: 5px;
+}
+
+main .voltage-container .container-chart {
+  padding: 0.4rem 2%;
+
+  /* padding: 1rem; */
+  /* background-color: rgba(0, 0, 0, 0.8); */
+}
+
+main .voltage-container .container-chart #myChart {
+  background-color: #212121;
+  width: 100%;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+}
+
+main .voltage-container .table-container {
+  padding: 0.6rem 2%;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+main .voltage-container .table-container table {
+  width: 100%;
+}
+
+main .voltage-container .table-container table td {
+  padding: 0.2rem 1rem;
+}
+
+main .voltage-container .table-container table td:last-child {
+  display: flex;
+  justify-content: center;
+}
+
+main .voltage-container .table-container table td a {
+  text-decoration: none;
+  background-color: #f9d923;
+  padding: 0.1rem 1rem;
+  color: rgba(0, 0, 0, 0.8);
+  border-radius: 2px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 1020px) {
