--- a/style.css
+++ b/style.css
@@ -196,20 +196,23 @@ main {
 
 /*Voltage*/
 
-main .voltage-header {
+main .voltage-header,
+main .current-header {
   padding: 1rem 3%;
   display: flex;
   justify-content: space-between;
 }
 
-main .voltage-header .title h3 {
+main .voltage-header .title h3,
+main .current-header .title h3 {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   color: rgba(0, 0, 0, 0.8);
 }
 
-main .voltage-container .buttons ul {
+main .voltage-container .buttons ul,
+main .current-container .buttons ul {
   display: flex;
   padding: 0 0.4rem;
   gap: 1rem;
@@ -217,7 +220,8 @@ main .voltage-container .buttons ul {
   list-style: none;
 }
 
-main .voltage-container .buttons ul li a {
+main .voltage-container .buttons ul li a,
+main .current-container .buttons ul li a {
   text-decoration: none;
   border: 1px solid black;
   padding: 0.1rem 0.8rem;
@@ -232,14 +236,17 @@ main .voltage-container .buttons ul li a {
   border-radius: 5px;
 }
 
-main .voltage-container .container-chart {
+main .voltage-container .container-chart,
+main .current-container .container-graph,
+main .current-container .container-bottom {
   padding: 0.4rem 2%;
 
   /* padding: 1rem; */
   /* background-color: rgba(0, 0, 0, 0.8); */
 }
 
-main .voltage-container .container-chart #myChart {
+main .voltage-container .container-chart #myChart,
+main .current-container .container-graph #myGraph {
   background-color: #212121;
   width: 100%;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
@@ -272,6 +279,31 @@ main .voltage-container .table-container table td a {
   color: rgba(0, 0, 0, 0.8);
   border-radius: 2px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+}
+
+/* Current */
+main .current-container .container-bottom {
+  display: grid;
+  grid-template-areas: "firstDetail secondDetail";
+  grid-template-columns: 1fr 0.6fr;
+  gap: 1rem;
+  height: 300px;
+}
+
+main .current-container .container-bottom .firstDetail,
+main .current-container .container-bottom .secondDetail {
+  border-radius: 5px;
+  background-color: #212121;
+}
+
+main .current-container .container-bottom .firstDetail {
+  grid-template-areas: firstDetail;
+  /* background-color: red; */
+}
+
+main .current-container .container-bottom .secondDetail {
+  grid-template-areas: secondDetail;
+  /* background-color: yellow; */
 }
 
 @media screen and (max-width: 1020px) {
