--- a/style.css
+++ b/style.css
@@ -83,7 +83,9 @@ main .hidden {
 
 .nav-container li:hover {
   cursor: pointer;
-  border-bottom: 2px solid rgba(71, 70, 70, 0.8);
+  a {
+    color: rgb(196, 194, 194);
+  }
 }
 
 .nav-container li.active {
@@ -98,6 +100,7 @@ main .hidden {
   /* background-color: red; */
   display: flex;
   align-items: center;
+  transition: 0.1s;
 }
 
 .nav-container ul li a span {
@@ -253,26 +256,53 @@ main .current-container .container-graph #myGraph {
   border-radius: 5px;
 }
 
-main .voltage-container .table-container {
-  padding: 0.6rem 2%;
-  width: 100%;
+main .voltage-container .table-container,
+main .current-container .firstDetail .table-container {
+  padding: 0.5rem;
   font-family: "Roboto", sans-serif;
 }
 
-main .voltage-container .table-container table {
+main .voltage-container .table-container {
+  margin: 0.6rem 2%;
+
+  /* width: 100%; */
+  background-color: #212121;
+  border-radius: 5px;
+}
+
+main .voltage-container .table-container table,
+main .current-container .firstDetail .table-container table {
   width: 100%;
+  border: 0rem solid rgb(233, 228, 228);
 }
 
-main .voltage-container .table-container table td {
+main .voltage-container .table-container table th,
+main .current-container .firstDetail .table-container table th {
   padding: 0.2rem 1rem;
+  font-weight: 400;
 }
 
-main .voltage-container .table-container table td:last-child {
+main .voltage-container .table-container table td,
+main .current-container .firstDetail .table-container table td {
+  padding: 0.2rem 1rem;
+  font-weight: 300;
+}
+
+main .voltage-container .table-container table tr th,
+main .voltage-container .table-container table tr td,
+main .current-container .firstDetail .table-container table tr th,
+main .current-container .firstDetail .table-container table tr td {
+  color: white;
+}
+
+main .voltage-container .table-container table td:last-child,
+main .current-container .firstDetail .table-container table td:last-child {
   display: flex;
   justify-content: center;
 }
 
-main .voltage-container .table-container table td a {
+main .voltage-container .table-container table td a,
+main .current-container .firstDetail .table-container table td a {
   text-decoration: none;
   background-color: #f9d923;
   padding: 0.1rem 1rem;
@@ -287,23 +317,31 @@ main .current-container .container-bottom {
   grid-template-areas: "firstDetail secondDetail";
   grid-template-columns: 1fr 0.6fr;
   gap: 1rem;
-  height: 300px;
 }
 
 main .current-container .container-bottom .firstDetail,
 main .current-container .container-bottom .secondDetail {
+  background-color: rgb(33, 33, 33);
   border-radius: 5px;
-  background-color: #212121;
 }
 
 main .current-container .container-bottom .firstDetail {
   grid-template-areas: firstDetail;
+  height: fit-content;
   /* background-color: red; */
 }
 
 main .current-container .container-bottom .secondDetail {
   grid-template-areas: secondDetail;
+  height: 200px;
+  padding: 0.5rem;
   /* background-color: yellow; */
+}
+
+main .current-container .container-bottom .secondDetail .container {
+  background-color: #80cbc4;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 1020px) {
